test(application.yml): db url 변경

--- a/loading-initial-data/src/test/resources/application.yml
+++ b/loading-initial-data/src/test/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:h2:mem://localhost/~/loading-initial-data-test
+    url: jdbc:h2:mem:testdb
   jpa:
     hibernate:
       ddl-auto: none
