feat(spring-boot-test-without-spring-application): `@SpringApplication` 어노테이션 없이 스프링 부트 테스트

--- a/settings.gradle
+++ b/settings.gradle
@@ -2,3 +2,4 @@ rootProject.name = 'spring-boot-in-action'
 
 include 'loading-initial-data'
 include 'http-request'
+include 'spring-boot-test-without-spring-application'
