--- a/settings.gradle
+++ b/settings.gradle
@@ -3,3 +3,4 @@ rootProject.name = 'spring-boot-in-action'
 include 'loading-initial-data'
 include 'http-request'
 include 'spring-boot-test-without-spring-boot-application'
+include 'message-properties-converter'
