--- a/message-properties-converter/build.gradle
+++ b/message-properties-converter/build.gradle
@@ -1,5 +1,6 @@
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation group: 'commons-io', name: 'commons-io', version: '2.7'
 }
