feat(context-closed-event): event raised when an ApplicationContext gets closed

--- a/settings.gradle
+++ b/settings.gradle
@@ -4,3 +4,4 @@ include 'loading-initial-data'
 include 'http-request'
 include 'spring-boot-test-without-spring-boot-application'
 include 'message-properties-converter'
+include 'context-closed-event'
