feat(graceful-shutdown): graceful-shutdown 프로젝트 신규

--- a/settings.gradle
+++ b/settings.gradle
@@ -5,3 +5,4 @@ include 'http-request'
 include 'spring-boot-test-without-spring-boot-application'
 include 'message-properties-converter'
 include 'context-closed-event'
+include 'graceful-shutdown'
