build(opentelemetry-setup): 프로젝트 신규

--- a/settings.gradle
+++ b/settings.gradle
@@ -6,3 +6,4 @@ include 'spring-boot-test-without-spring-boot-application'
 include 'message-properties-converter'
 include 'context-closed-event'
 include 'graceful-shutdown'
+include 'opentelemetry-setup'
