--- a/settings.gradle
+++ b/settings.gradle
@@ -6,4 +6,4 @@ include 'spring-boot-test-without-spring-boot-application'
 include 'message-properties-converter'
 include 'context-closed-event'
 include 'graceful-shutdown'
-include 'opentelemetry-setup'
+include 'opentelemetry-setup-downstream'
