feat(opentelemetry-setup:upstream): 프로젝트 신규

--- a/settings.gradle
+++ b/settings.gradle
@@ -7,3 +7,4 @@ include 'message-properties-converter'
 include 'context-closed-event'
 include 'graceful-shutdown'
 include 'opentelemetry-setup:downstream'
+include 'opentelemetry-setup:upstream'
