refactor(opentelemetry-setup): 어플리케이션 이름 및 기동 포트 변경

--- a/opentelemetry-setup/upstream/src/main/resources/application.yml
+++ b/opentelemetry-setup/upstream/src/main/resources/application.yml
@@ -1,5 +1,9 @@
 server:
-  port: 8080
+  port: 18081
+
+spring:
+  application:
+    name: upstream-service
 
 priceClient:
-  baseUrl: http://localhost:8081
+  baseUrl: http://downstream-service:18080
