feat(opentelemetry-setup): sleuth 관련 application.yml 설정 추가

--- a/opentelemetry-setup/downstream/src/main/resources/application.yml
+++ b/opentelemetry-setup/downstream/src/main/resources/application.yml
@@ -4,3 +4,10 @@ server:
 spring:
   application:
     name: downstream-service
+  sleuth:
+    otel:
+      config:
+        trace-id-ratio-based: 1.0
+      exporter:
+        otlp:
+          endpoint: http://collector:4317
