--- a/opentelemetry-setup/upstream/src/main/resources/application.yml
+++ b/opentelemetry-setup/upstream/src/main/resources/application.yml
@@ -4,6 +4,13 @@ server:
 spring:
   application:
     name: upstream-service
+  sleuth:
+    otel:
+      config:
+        trace-id-ratio-based: 1.0
+      exporter:
+        otlp:
+          endpoint: http://collector:4317
 
 priceClient:
   baseUrl: http://downstream-service:18080
