--- a/opentelemetry-setup/docker-compose.yml
+++ b/opentelemetry-setup/docker-compose.yml
@@ -2,10 +2,26 @@ version: "3.3"
 
 services:
   downstream-service:
+    platform: linux/amd64
     build: downstream/
     ports:
       - "18080:18080"
   upstream-service:
+    platform: linux/amd64
     build: upstream/
     ports:
       - "18081:18081"
+  collector:
+    image: otel/opentelemetry-collector:0.72.0
+    command: [ "--config=/etc/otel-collector-config.yml" ]
+    volumes:
+      - ./otel-config.yml:/etc/otel-collector-config.yml
+    ports:
+      - "4317:4317"
+    depends_on:
+      - jaeger-service
+  jaeger-service:
+    image: jaegertracing/all-in-one:latest
+    ports:
+      - "16686:16686"
+      - "14250"
