refactor(opentelemetry-setup): 프로젝트명 변경(-> opentelemetry-setup-with-jaeger)

--- a/settings.gradle
+++ b/settings.gradle
@@ -6,5 +6,5 @@ include 'spring-boot-test-without-spring-boot-application'
 include 'message-properties-converter'
 include 'context-closed-event'
 include 'graceful-shutdown'
-include 'opentelemetry-setup:downstream'
-include 'opentelemetry-setup:upstream'
+include 'opentelemetry-setup-with-jaeger:downstream'
+include 'opentelemetry-setup-with-jaeger:upstream'
