build(http-request): Dockerfile base image 수정(openjdk -> ubuntu)

--- a/http-request/Dockerfile
+++ b/http-request/Dockerfile
@@ -1,4 +1,10 @@
-FROM openjdk:11
+FROM ubuntu:24.04
+
+RUN apt-get -y update && apt-get -y upgrade
+RUN apt-get install -y openjdk-11-jdk \
+                       net-tools \
+                       tcpdump \
+                       curl
 
 ARG APP_JAR=http-request-0.0.1-SNAPSHOT.jar
 EXPOSE 8080
