--- a/https-api/src/main/resources/application.yml
+++ b/https-api/src/main/resources/application.yml
@@ -1,3 +1,8 @@
 server:
-  port: 8080
-  shutdown: graceful
+  port: 8443
+  ssl:
+    enabled: true
+    key-store: https-api/keystore.p12
+    key-store-password: # fill blank
+    key-store-type: PKCS12
+    key-alias: bns-ssl
