feat(https-api): key convert 스크립트 추가(crt -> pfx -> jks)

--- a/https-api/src/main/resources/application.yml
+++ b/https-api/src/main/resources/application.yml
@@ -1,8 +1,17 @@
 server:
   port: 8443
+# p12
+#  ssl:
+#    enabled: true
+#    key-store: https-api/keystore.p12
+#    key-store-password: # fill blank
+#    key-store-type: PKCS12
+#    key-alias: bns-ssl
+
+# jks
   ssl:
-    enabled: true
-    key-store: https-api/keystore.p12
+    key-store: https-api/converted.jks
     key-store-password: # fill blank
-    key-store-type: PKCS12
-    key-alias: bns-ssl
+    key-store-type: JKS
+    key-alias: 1
+    key-password: # fill blank
