feat(actuator): 프로젝트 신규

--- a/settings.gradle
+++ b/settings.gradle
@@ -10,3 +10,4 @@ include 'opentelemetry-setup-with-jaeger:downstream'
 include 'opentelemetry-setup-with-jaeger:upstream'
 include 'webflux-test'
 include 'https-api'
+include 'actuator'
