--- a/actuator/src/main/resources/application.yml
+++ b/actuator/src/main/resources/application.yml
@@ -4,6 +4,9 @@ management:
   endpoint:
     shutdown:
       enabled: true
+    health:
+      show-components: always
+  #      show-details: always
   endpoints:
     web:
       exposure:
