--- a/monitoring/src/main/resources/application.yml
+++ b/monitoring/src/main/resources/application.yml
@@ -1,5 +1,6 @@
 server:
   port: 8080
+
 management:
   endpoint:
     shutdown:
@@ -11,3 +12,7 @@ management:
     web:
       exposure:
         include: "*"
+
+logging:
+  level:
+    com.example: debug
