--- a/settings.gradle
+++ b/settings.gradle
@@ -11,3 +11,5 @@ include 'opentelemetry-setup-with-jaeger:upstream'
 include 'webflux-test'
 include 'https-api'
 include 'monitoring'
+include 'spring-cloud-config-server'
+include 'spring-cloud-config-client'
