feat(spring-cloud-config-server): @EnableConfigServer 어노테이션 추가

--- a/spring-cloud-config/server/src/main/resources/application.yml
+++ b/spring-cloud-config/server/src/main/resources/application.yml
@@ -10,3 +10,7 @@ spring:
       server:
         git:
           uri: https://github.com/seriouskang/spring-cloud-config-tutorial-repo
+
+#logging:
+#  level:
+#    root: DEBUG
