feat(spring-cloud-config-server): configuration repository 변경(git -> filesystem)

--- a/spring-cloud-config/server/src/main/resources/application.yml
+++ b/spring-cloud-config/server/src/main/resources/application.yml
@@ -3,13 +3,22 @@ management:
     web:
       exposure:
         include: "*"
+  endpoint:
+    env:
+      show-values: ALWAYS
 
 spring:
+  application:
+    name: config-server
+  profiles:
+    active: native
   cloud:
     config:
       server:
-        git:
-          uri: https://github.com/seriouskang/spring-cloud-config-tutorial-repo
+#        git:
+#          uri: https://github.com/seriouskang/spring-cloud-config-tutorial-repo
+        native:
+          search-locations: classpath:config/
 
 #logging:
 #  level:
