--- a/opentelemetry-sample-app/build.gradle
+++ b/opentelemetry-sample-app/build.gradle
@@ -17,5 +17,5 @@ dependencies {
 	implementation("org.springframework.boot:spring-boot-starter-actuator")
 	implementation("org.springframework.boot:spring-boot-starter-web")
 //	implementation("io.opentelemetry:opentelemetry-api:1.24.0")
-//	implementation("io.micrometer:micrometer-registry-prometheus:1.10.5")
+ 	implementation("io.micrometer:micrometer-registry-prometheus:1.10.5")
 }
