--- a/opentelemetry-sample-app/build.gradle
+++ b/opentelemetry-sample-app/build.gradle
@@ -1,13 +1,13 @@
 plugins {
-	id("org.springframework.boot") version "3.1.1"
+	id("org.springframework.boot") version "2.7.18"
 	id("io.spring.dependency-management") version "1.1.0"
 	id("java")
 }
 
 group = "com.example"
 version = "0.0.1-SNAPSHOT"
-sourceCompatibility = JavaVersion.VERSION_17
-targetCompatibility = JavaVersion.VERSION_17
+sourceCompatibility = JavaVersion.VERSION_1_8
+targetCompatibility = JavaVersion.VERSION_1_8
 
 repositories {
 	mavenCentral()
@@ -16,6 +16,6 @@ repositories {
 dependencies {
 	implementation("org.springframework.boot:spring-boot-starter-actuator")
 	implementation("org.springframework.boot:spring-boot-starter-web")
+	implementation("io.micrometer:micrometer-registry-prometheus:1.10.5")
 //	implementation("io.opentelemetry:opentelemetry-api:1.24.0")
- 	implementation("io.micrometer:micrometer-registry-prometheus:1.10.5")
 }
