--- a/opentelemetry-sample-app/build.gradle
+++ b/opentelemetry-sample-app/build.gradle
@@ -13,9 +13,19 @@ repositories {
 	mavenCentral()
 }
 
+configurations {
+	compileOnly {
+		extendsFrom annotationProcessor
+	}
+}
+
 dependencies {
 	implementation("org.springframework.boot:spring-boot-starter-actuator")
 	implementation("org.springframework.boot:spring-boot-starter-web")
 	implementation("io.micrometer:micrometer-registry-prometheus:1.10.5")
 //	implementation("io.opentelemetry:opentelemetry-api:1.24.0")
+
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
 }
+
