refactor(opentelemetry-sample-app): application.yml 미사용 속성 주석 처리

--- a/opentelemetry-sample-app/src/main/resources/application.yaml
+++ b/opentelemetry-sample-app/src/main/resources/application.yaml
@@ -4,8 +4,8 @@ management:
       exposure:
         include: prometheus,health
   metrics:
-    tags:
-      application: app
+#    tags:
+#      application: app
     distribution:
       percentiles-histogram:
         http:
