--- a/opentelemetry-sample-app/src/main/resources/application.yaml
+++ b/opentelemetry-sample-app/src/main/resources/application.yaml
@@ -2,19 +2,19 @@ management:
   endpoints:
     web:
       exposure:
-        include: prometheus,health
-  metrics:
+        include: prometheus
+#  metrics:
 #    tags:
 #      application: app
-    distribution:
-      percentiles-histogram:
-        http:
-          server:
-            requests: 'true'
-      minimum-expected-value:
-        http.server.requests: 5ms
-      maximum-expected-value:
-        http.server.requests: 1000ms
+#    distribution:
+#      percentiles-histogram:
+#        http:
+#          server:
+#            requests: 'true'
+#      minimum-expected-value:
+#        http.server.requests: 5ms
+#      maximum-expected-value:
+#        http.server.requests: 1000ms
 
 #logging:
 #  pattern:
