--- a/opentelemetry-sample-app/src/main/resources/application.yaml
+++ b/opentelemetry-sample-app/src/main/resources/application.yaml
@@ -3,16 +3,16 @@ management:
     web:
       exposure:
         include: prometheus
-  metrics:
-    distribution:
-      percentiles-histogram:
-        http:
-          server:
-            requests: 'true'
-      minimum-expected-value:
-        http.server.requests: 5ms
-      maximum-expected-value:
-        http.server.requests: 1000ms
+#  metrics:
+#    distribution:
+#      percentiles-histogram:
+#        http:
+#          server:
+#            requests: 'true'
+#      minimum-expected-value:
+#        http.server.requests: 5ms
+#      maximum-expected-value:
+#        http.server.requests: 1000ms
 #    tags:
 #      application: app
 
