--- a/https-api/src/main/resources/application.yml
+++ b/https-api/src/main/resources/application.yml
@@ -1,17 +1,21 @@
 server:
   port: 8443
 # p12
-#  ssl:
-#    enabled: true
-#    key-store: https-api/keystore.p12
-#    key-store-password: # fill blank
-#    key-store-type: PKCS12
-#    key-alias: bns-ssl
+  ssl:
+    enabled: true
+    key-store: classpath:keystore.p12
+    key-store-password: changeit
+    key-store-type: PKCS12
+    key-alias: https-test
+
+http:
+  port: 8080
+
 
 # jks
-  ssl:
-    key-store: https-api/converted.jks
-    key-store-password: # fill blank
-    key-store-type: JKS
-    key-alias: 1
-    key-password: # fill blank
+#  ssl:
+#    key-store: https-api/converted.jks
+#    key-store-password: # fill blank
+#    key-store-type: JKS
+#    key-alias: 1
+#    key-password: # fill blank
